Adding base64 and md5 support, also created Rectangular interceptor in order to encode the URL params.

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-md5/angular-md5.js"></script>
+    <script src="lib/angular-base64/angular-base64.js"></script>
 
     <!-- google maps javascript -->
     <!-- // <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script> -->
@@ -36,6 +38,7 @@
     <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/interceptors.js"></script>
 
     <!-- // <script src="js/mapviewer.web.js"></script> -->
   </head>
