--- a/www/index.html
+++ b/www/index.html
@@ -36,11 +36,13 @@
     <script src="js/app.js"></script>
     <script src="js/run.js"></script>
     <script src="js/constants.js"></script>
+    <script src="js/decorators/q.decorator.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/vendor/vg.map/map.directive.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/vendor/vg.map/map.controller.js"></script>
     <script src="js/directions/directions.controller.js"></script>
+    <script src="js/directions/direction.controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/interceptors.js"></script>
     <script src="js/MyRoute.js"></script>
