--- a/www/index.html
+++ b/www/index.html
@@ -20,17 +20,13 @@
     <script src="lib/angular-md5/angular-md5.js"></script>
     <script src="lib/angular-base64/angular-base64.js"></script>
 
-    <!-- google maps javascript -->
-    <!-- // <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script> -->
-
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
     <script src="lib/restangular/dist/restangular.min.js"></script>
     <script src="lib/lodash/lodash.min.js"></script>
 
     <!-- VisioGlobe JS -->
     <script src="js/vendor/vg.mapviewer.web.js"></script>
-    <!-- <script src="js/vendor/sdk.js"></script> -->
 `
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -39,18 +35,21 @@
     <script src="js/decorators/q.decorator.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/vendor/vg.map/map.directive.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/interceptors.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/vendor/vg.map/map.controller.js"></script>
+    <script src="js/home/home.controller.js"></script>
+    <script src="js/departments/departments.controller.js"></script>
+    <script src="js/departments/department.controller.js"></script>
     <script src="js/directions/directions.controller.js"></script>
     <script src="js/directions/direction.controller.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/interceptors.js"></script>
     <script src="js/MyRoute.js"></script>
     <script src="js/MyNavigation.js"></script>
 
     <!-- // <script src="js/mapviewer.web.js"></script> -->
   </head>
-  <body ng-controller="GlobalController as global">
+  <body>
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
